Overflow fix (#34)

--- a/src/checkout/styles/payform.css
+++ b/src/checkout/styles/payform.css
@@ -276,7 +276,7 @@ input::-ms-clear {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    overflow-y: scroll;
+    overflow-y: visible;
     border-radius: 6px;
     background-color: #f5f5f7;
     box-shadow: 0 12px 30px 0 rgba(0,0,0,.6),inset 0 1px 0 0 #fff;
